Move wildcard endpoint building to RoutingController